Move font primary to mixin. Do refactor on Logowanie component

--- a/korepetycje-front/src/assets/sass/_mixins.scss
+++ b/korepetycje-front/src/assets/sass/_mixins.scss
@@ -16,6 +16,16 @@
   }
 }
 
+@mixin font-primary {
+  font-family: Roboto;
+  font-weight: 300;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-decoration: none;
+}
+
 @mixin reset-button {
   border: none;
   margin: 0;
