--- a/korepetycje-front/src/assets/sass/_transitions.scss
+++ b/korepetycje-front/src/assets/sass/_transitions.scss
@@ -1,6 +1,6 @@
 // fade
 .fade-enter-active, .fade-leave-active {
-  transition: opacity .5s;
+  transition: opacity .1s ease-in-out;
 }
 
 .fade-enter, .fade-leave-to {
